scss-module-fix

--- a/package.json
+++ b/package.json
@@ -134,7 +134,12 @@
     "yjs": "13.6.20",
     "y-prosemirror": "1.2.12"
   },
-  "trustedDependencies": ["@biomejs/biome", "@swc/core", "esbuild", "protobufjs"],
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@swc/core",
+    "esbuild",
+    "protobufjs"
+  ],
   "dependencies": {
     "form-data": "^4.0.1",
     "idb": "^8.0.0",
