--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "always"
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
