--- a/codegen.yml
+++ b/codegen.yml
@@ -3,25 +3,33 @@ generates:
   # Generate types for chat
   src/graphql/schema/chat.gen.ts:
     schema: 'https://chat.discours.io'
+    documents: 
+      - 'src/graphql/query/chat/**/*.ts'
+      - 'src/graphql/mutation/chat/**/*.ts'
     plugins:
       - 'typescript'
       - 'typescript-operations'
-      - 'typescript-urql'
+      # - 'typescript-urql'
     config:
       skipTypename: true
       useTypeImports: true
       outputPath: './src/graphql/types/chat.gen.ts'
-      # namingConvention: change-case#CamelCase # for generated types
+      scalars:
+        DateTime: string
 
   # Generate types for core
   src/graphql/schema/core.gen.ts:
-    schema: 'https://core.discours.io'
+    schema: 'https://coretest.discours.io'
+    documents: 
+      - 'src/graphql/query/core/**/*.ts'
+      - 'src/graphql/mutation/core/**/*.ts'
     plugins:
       - 'typescript'
       - 'typescript-operations'
-      - 'typescript-urql'
+      # - 'typescript-urql'
     config:
       skipTypename: true
       useTypeImports: true
       outputPath: './src/graphql/types/core.gen.ts'
-      # namingConvention: change-case#CamelCase # for generated types
+      scalars:
+        DateTime: string
