--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@types/cookie-signature": "^1.1.2",
     "@types/node": "^22.7.7",
     "@types/throttle-debounce": "^5.0.2",
-    "@urql/core": "^5.0.7",
+    "@urql/core": "^5.0.8",
     "axe-playwright": "^2.0.3",
     "clsx": "^2.1.1",
     "cookie": "^1.0.1",
@@ -93,10 +93,10 @@
     "extended-eventsource": "^1.7.0",
     "fast-deep-equal": "^3.1.3",
     "graphql": "^16.9.0",
-    "i18next": "^23.16.0",
+    "i18next": "^23.16.2",
     "i18next-http-backend": "^2.6.2",
     "i18next-icu": "^2.3.0",
-    "intl-messageformat": "^10.7.0",
+    "intl-messageformat": "^10.7.1",
     "javascript-time-ago": "^2.5.11",
     "patch-package": "^8.0.0",
     "prosemirror-history": "^1.4.1",
@@ -134,12 +134,7 @@
     "yjs": "13.6.20",
     "y-prosemirror": "1.2.12"
   },
-  "trustedDependencies": [
-    "@biomejs/biome",
-    "@swc/core",
-    "esbuild",
-    "protobufjs"
-  ],
+  "trustedDependencies": ["@biomejs/biome", "@swc/core", "esbuild", "protobufjs"],
   "dependencies": {
     "form-data": "^4.0.1",
     "idb": "^8.0.0",
