--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -2,8 +2,7 @@ name: "CI and E2E Tests"
 
 on:
   push:
-  deployment_status:
-    types: [success]
+    branches: [dev]
 
 jobs:
   ci:
@@ -32,7 +31,7 @@ jobs:
       - name: Debug event info
         run: |
           echo "Event Name: ${{ github.event_name }}"
-          echo "Deployment Status: ${{ github.event.deployment_status.state }}"
+          echo "Deployment Status: ${{ github.action_status }}"
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
@@ -46,6 +45,10 @@ jobs:
             printf '.'
             sleep 10
           done
+      - name: create env file
+        run: |
+          touch .env
+          echo TEST_PASSWORD=${{ github.env.TEST_PASSWORD }} >> .env
       - name: Install Playwright and dependencies
         run: npm run e2e:install
       - name: Run Playwright tests
