--- a/codegen.yml
+++ b/codegen.yml
@@ -19,7 +19,7 @@ generates:
 
   # Generate types for core
   src/graphql/schema/core.gen.ts:
-    schema: 'https://coretest.discours.io'
+    schema: 'https://core.discours.io'
     documents: 
       - 'src/graphql/query/core/**/*.ts'
       - 'src/graphql/mutation/core/**/*.ts'
