--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "e2e:install": "npx playwright install webkit && npx playwright install-deps ",
     "fix": "npx @biomejs/biome check . --fix && stylelint **/*.{scss,css} --fix",
     "format": "npx @biomejs/biome format src/. --write",
-    "postinstall": "npm run codegen && npx patch-package",
+    "postinstall": "npm run codegen",
     "typecheck": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "storybook:test": "test-storybook",
@@ -24,13 +24,13 @@
     "@authorizerdev/authorizer-js": "^2.0.3",
     "@biomejs/biome": "^1.9.4",
     "@graphql-codegen/cli": "^5.0.3",
-    "@graphql-codegen/typescript": "^4.1.0",
-    "@graphql-codegen/typescript-operations": "^4.3.0",
+    "@graphql-codegen/typescript": "^4.1.1",
+    "@graphql-codegen/typescript-operations": "^4.3.1",
     "@graphql-codegen/typescript-urql": "^4.0.0",
     "@hocuspocus/provider": "^2.13.7",
-    "@playwright/test": "^1.48.1",
+    "@playwright/test": "^1.48.2",
     "@solid-primitives/media": "^2.2.9",
-    "@solid-primitives/memo": "^1.3.9",
+    "@solid-primitives/memo": "^1.3.10",
     "@solid-primitives/pagination": "^0.3.0",
     "@solid-primitives/script-loader": "^2.2.0",
     "@solid-primitives/share": "^2.0.6",
@@ -82,27 +82,26 @@
     "@tiptap/extension-youtube": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@types/cookie-signature": "^1.1.2",
-    "@types/node": "^22.7.9",
+    "@types/node": "^22.8.5",
     "@types/throttle-debounce": "^5.0.2",
     "@urql/core": "^5.0.8",
     "axe-playwright": "^2.0.3",
     "clsx": "^2.1.1",
     "cookie": "^1.0.1",
-    "cookie-signature": "^1.2.1",
+    "cookie-signature": "^1.2.2",
     "cropperjs": "^1.6.2",
     "extended-eventsource": "^1.7.0",
     "fast-deep-equal": "^3.1.3",
     "graphql": "^16.9.0",
-    "i18next": "^23.16.2",
+    "i18next": "^23.16.4",
     "i18next-http-backend": "^2.6.2",
     "i18next-icu": "^2.3.0",
-    "intl-messageformat": "^10.7.1",
+    "intl-messageformat": "^10.7.3",
     "javascript-time-ago": "^2.5.11",
-    "patch-package": "^8.0.0",
     "prosemirror-history": "^1.4.1",
     "prosemirror-trailing-node": "^3.0.0",
-    "prosemirror-view": "^1.34.3",
-    "sass": "^1.80.4",
+    "prosemirror-view": "^1.35.0",
+    "sass": "^1.80.5",
     "solid-js": "^1.9.3",
     "solid-popper": "^0.3.0",
     "solid-tiptap": "0.7.0",
