--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.9.7",
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
+    "dev": "NODE_NO_WARNINGS=1 vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
     "codegen": "graphql-codegen",
